Agregando mensajes  En la rama master 	modificado:     steps/lesson1/CMakeLists.txt

--- a/steps/lesson1/CMakeLists.txt
+++ b/steps/lesson1/CMakeLists.txt
@@ -2,4 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 
 project (Tutorial)
 
+message("Binary dir " ${CMAKE_BINARY_DIR})
+message("Source dir " ${CMAKE_SOURCE_DIR})
+
 add_executable (Tutorial tutorial.cpp)
