Arreglando variables de salida  En la rama master 	modificado:     steps/lesson3/CMakeLists.txt

--- a/steps/lesson3/CMakeLists.txt
+++ b/steps/lesson3/CMakeLists.txt
@@ -5,8 +5,8 @@ project(Tutorial)
 # The version number
 set(Tutorial_VERSION_MAJOR 1)
 set(Tutorial_VERSION_MINOR 0)
-set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
+
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 
 # Configure a header file to pass some
 # of the CMake settings to the source
